spring boot app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ server.port = 9081
 #spring.jpa.hibernate.ddl-auto=update
 #springs .jpa.show-sql = true
 
-app.profile=dev-prod
-spring.profiles.active=dev-prod
+app.profile=dev
+spring.profiles.active=dev
